<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

      <string name="lepref_title">LeEco Extras</string>
      <string name="battery_settings_title">Battery</string>
      <string name="qc_title">Quick Charge</string>
      <string name="qc_summary">Enable/disable quick charge settings</string>
      <string name="graphics_settings_title">Graphics</string>
      <string name="vsync_title">V-Sync</string>
      <string name="vsync_summary">Enable/disable vertical sync(Restarts SystemUI)</string>
      <string name="sound_settings_title">Sound</string>
      <string name="ibr_title">In-band Ringing</string>
      <string name="ibr_summary">Enable/disable in-band ringing</string>
      <string name="others_settings_title">Others</string>
      <string name="iaf_title">In-app Focus Fix</string>
</resources>
