<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="batt"
        android:title="@string/battery_settings_title" >

        <SwitchPreference
            android:key="qc_setting"
            android:defaultValue="true"
            android:title="@string/qc_title"
            android:summary="@string/qc_summary" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="graphics"
        android:title="@string/graphics_settings_title" >

        <SwitchPreference
            android:key="vsync_setting"
            android:defaultValue="false"
            android:title="@string/vsync_title"
            android:summary="@string/vsync_summary" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="sound"
        android:title="@string/sound_settings_title" >

        <SwitchPreference
            android:key="ibr_setting"
            android:defaultValue="true"
            android:title="@string/ibr_title"
            android:summary="@string/ibr_summary" />
    </PreferenceCategory>
</PreferenceScreen>
